--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header></header>
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
-            <h1 class="apresentaçao__conteudo__titulo">Eleve seu negócio digital a outro nível <strong class="titulo-destaque">com um Front-end de qualidade!</strong></h1>
+            <h1 class="apresentaçao__conteudo__titulo">Eleve seu negócio digital a outro nível! <strong class="titulo-destaque">com um Front-end de qualidade!</strong></h1>
 
             <p class="apresentacao__conteudo__texto">Oie! Sou Caique Vaz, desenvolvedor Front-end com especialidade em React, HTML e CSS. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
         <div class="apresentacao__links">
