--- a/index.html
+++ b/index.html
@@ -5,25 +5,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfólio</title>
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./styles/style.css">
 </head>
 
 <body>
-    <header></header>
+    <header class="cabecalho">
+        <nav class="cabecalho__menu">
+            <a class="cabecalho__menu__link" href="index.html">Home</a>
+            <a class="cabecalho__menu__link" href="about.html">Sobre mim</a>
+        </nav>
+    </header>
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
             <h1 class="apresentaçao__conteudo__titulo">Eleve seu negócio digital a outro nível! <strong class="titulo-destaque">com um Front-end de qualidade!</strong></h1>
 
             <p class="apresentacao__conteudo__texto">Oie! Sou Caique Vaz, desenvolvedor Front-end com especialidade em React, HTML e CSS. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
         <div class="apresentacao__links">
-            <a class="apresentacao__links__link" href="https://instagram.com/vaz_caique">Instagram</a>
-            <a class="apresentacao__links__link" href="https://github.com/vazcaique">GitHub</a>
+            <h2 class="apresentacao__links__subtitulo">Acesse minhas redes:</h2>
+            <a class="apresentacao__links__link" href="https://github.com/vazcaique">
+                <img src="./assets/github.png" alt="">
+                GitHub</a>
+            <a class="apresentacao__links__link" href="https:/instagram/vazcaique">
+                <img src="./assets/instagram.png" alt="">
+                Instagram</a>
+            <a class="apresentacao__links__link" href="https:/linkedin/vazcaique">
+                <img src="./assets/linkedin.png" alt="">
+                Linkedin</a>
         </div>
         </section>
 
-        <img src="eu2.jpg" alt="Caique Vaz"width="280px" height="320px">
+        <img src="./assets/eu2.jpg" alt="Caique Vaz"width="280px" height="320px">
     </main>
-    <footer></footer>
+    <footer class="rodape">
+        <p>Desenvolvido por Alura.</p>
+    </footer>
 
     
 </body>
