--- a/about.html
+++ b/about.html
@@ -17,10 +17,10 @@
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
             <h1 class="apresentacao__conteudo__titulo">Sobre mim</h1>
-            <p class="apresentacao__conteudo__texto">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga.</p>
-            <p class="apresentacao__conteudo__texto">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores ipsum delis forum birol parela maxime infena. Excepteur sint occaecat cupidatat non.</p>
+            <p class="apresentacao__conteudo__texto">Meu nome é Caique Vaz Arruda, tenho 19 anos e estou fazendo estágio em TI, minha empresa atual é a Agrofauna, procuro desenvolver ao máximo minhas habilidades para a construção de um site.</p>
+            <p class="apresentacao__conteudo__texto">No momento estou aprofundando meu conhecimento em HTML e CSS para fornecer dados e cores ao meu projeto, utilizando a linguagem Java Script, para ter interatividade com meus usuários e fornecer a eles um site em que tenham conforto de utiliza-lo, tudo isso com estudos feitos na Alura cursos!</p>
         </section>
-        <img class="apresentacao__imagem" src="./assets/eu2.jpg" alt="Caique Vaz" width ="" height="">
+        <img class="apresentacao__imagem" src="./assets/eu2.jpg" alt="Caique Vaz" width ="250px" height="">
     </main>
 
     <footer class="rodape">
