--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
             <p class="apresentacao__conteudo__texto">Meu nome é Caique Vaz Arruda, tenho 19 anos e estou fazendo estágio em TI, minha empresa atual é a Agrofauna, procuro desenvolver ao máximo minhas habilidades para a construção de um site.</p>
             <p class="apresentacao__conteudo__texto">No momento estou aprofundando meu conhecimento em HTML e CSS para fornecer dados e cores ao meu projeto, utilizando a linguagem Java Script, para ter interatividade com meus usuários e fornecer a eles um site em que tenham conforto de utiliza-lo, tudo isso com estudos feitos na Alura cursos!</p>
         </section>
-        <img class="apresentacao__imagem" src="./assets/eu2.jpg" alt="Caique Vaz" width ="250px" height="">
+        <img class="apresentacao__imagem" src="./assets/eu2.jpg" alt="Caique Vaz" width ="" height="280px">
     </main>
 
     <footer class="rodape">
