--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </div>
         </section>
 
-        <img class="apresentacao__imagem" src="./assets/eu2.jpg" alt="Caique Vaz"width="" height="280px">
+        <img class="apresentacao__imagem" src="./assets/eu2.jpg" alt="Caique Vaz"width="335px" height="280px">
     </main>
     <footer class="rodape">
         <p>Desenvolvido por Alura.</p>
