--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
             <a class="apresentacao__links__navegacao" href="https://github.com/vazcaique">
                 <img src="./assets/github.png" alt="">
                 GitHub</a>
-            <a class="apresentacao__links__navegacao" href="https:/instagram/vazcaique">
+            <a class="apresentacao__links__navegacao" href="https://www.instagram.com/vaz_caique?igsh=YWZkYjNyc2Jyd2hk&utm_source=qr">
                 <img src="./assets/instagram.png" alt="">
                 Instagram</a>
-            <a class="apresentacao__links__navegacao" href="https:/linkedin/vazcaique">
+            <a class="apresentacao__links__navegacao" href="https://www.linkedin.com/feed/?trk=onboarding-landing">
                 <img src="./assets/linkedin.png" alt="">
                 Linkedin</a>
         </div>
